force-app/main/default/objects/Replica__c/Replica__c.object-meta.xml
<CustomObject>
    <label>Replica</label>
    <nameField>
        <label>Name of the event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Replica</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>