force-app/main/default/objects/Replica__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>