force-app/main/default/objects/Replica__c/fields/Nu__c.field-meta.xml
<CustomField>
    <fullName>Nu__c</fullName>
    <label>Number of participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>