force-app/main/default/objects/Replica__c/fields/Replica__c.field-meta.xml
<CustomField>
    <fullName>Replica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Replicas</relationshipName>
    <type>Lookup</type>
</CustomField>