force-app/main/default/objects/Replica__c/fields/Type_of_replica__c.field-meta.xml
<CustomField>
    <fullName>Type_of_replica__c</fullName>
    <label>Type of replica</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National or International Conferences</fullName>
            </value>
            <value>
                <fullName>Workshops</fullName>
            </value>
            <value>
                <fullName>Lessons</fullName>
            </value>
            <value>
                <fullName>AMSA Seminars in Mexico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>